--- a/src/styles/Esfija.css
+++ b/src/styles/Esfija.css
@@ -16,4 +16,12 @@
 
 .info {
     width: 30%;
+    display: flex;
+    flex-direction: column;
+}
+
+.cambio {
+    background-color: brown;
+    color: whitesmoke;
+    font-weight: bold;
 }
