--- a/src/styles/Esfija.css
+++ b/src/styles/Esfija.css
@@ -6,11 +6,12 @@
 }
 
 .bar {
-    height: 100%;
+    max-height: 30rem;
+    overflow-y: auto;
     width: 70%;
     margin-left: 2rem;
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
 }
 
