--- a/src/styles/Tabla.css
+++ b/src/styles/Tabla.css
@@ -14,16 +14,18 @@ th {
 
 /* Estilos alternativos para filas impares */
 tr:nth-child(odd) {
-  background-color: #bebebe;
+  background-color: #c43636;
+  color: white;
 }
 
 /* Estilos para el encabezado de la tabla */
 th {
-  color: rgb(34, 34, 34);
+  color: rgb(255, 255, 255);
+  text-align: center;
 }
 
 .tabla {
-  height: 300px;
+  height: 150px;
   overflow: auto;
   margin: 1rem;
 }
