--- a/src/styles/Adder.css
+++ b/src/styles/Adder.css
@@ -13,3 +13,17 @@ p {
     font-size: small;
     color: gray;
 }
+
+.botones {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+    background-color: #333;
+    margin-top: 1rem;
+    border-radius: 2rem;
+}
+
+.color-white {
+    color: white;
+}
